--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ body {
     --navbar-height: 3em;
     --footer-height: 15em;
 
-    --background-color: hsla(0, 0%, 98%, 1);
+    
     --top-background-gradient: linear-gradient(90deg, rgba(130, 232, 9, 1) 0%, rgba(82, 192, 62, 1) 50%, rgba(0, 155, 255, 1) 100%);
     --welcome-text-color: hsla(0, 0%, 100%, 1);
     --main-text-color: black;
@@ -18,6 +18,8 @@ body {
     --red: hsl(354, 70%, 54%);
     --technology-background-color: white;
 
+
+    /**/
     --blue: #86A6F3;
     --turquoise: #A8E2F1;
     --purple: #9F98F3;
@@ -26,6 +28,12 @@ body {
     --orange: #FFD4BF;
     --green: #6BDBA4;
     --yellow: #E1F8B4;
+
+    --text-color-main-light: #000000;
+    --text-color-secondary-light: #F9F9EC;
+    --text-color-accent-light: var(--purple);
+
+    --background-color: #EDEEE9;
 
     --section-top-padding: 5em;
 
@@ -36,10 +44,6 @@ body {
 
 body.dark-theme {
     --background-color: hsla(240, 4, 5, 1);
-}
-
-section * {
-    color: var(--main-text-color);
 }
 
 .section-title {
@@ -65,6 +69,7 @@ section * {
     left: -5%;
 }
 
+/*
 .rounded-button {
     --button-height: 4em;
 
@@ -81,6 +86,7 @@ section * {
     font-size: 1.5em;
     font-weight: 100;
 }
+*/
 
 @media (min-width: 700px) {
     p {
