--- a/styles/welcome-section.styles.css
+++ b/styles/welcome-section.styles.css
@@ -129,9 +129,9 @@
 
 .welcome-social-icons-wrapper>a {
     display: block;
-    width: 2.9em;
-    height: 2.9em;
-    border-radius: 1.45em;
+    width: 2.8em;
+    height: 2.8em;
+    border-radius: 1.4em;
     background-color: var(--social-icon-background);
     display: flex;
     justify-content: center;
@@ -148,6 +148,14 @@
 }
 
 .social-icon-dark {
+    display: none;
+}
+
+.darkmode .social-icon-dark {
+    display: inline-block;
+}
+
+.darkmode .social-icon-light {
     display: none;
 }
 
