--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,10 @@
 
     --primary-text-color-light: #000000;
     --secondary-text-color-light: #868686;
-    --welcome-text-title-color-light: #404040;
+    --primary-text-color-dark: #FFFFFF;
+    --secondary-text-color-dark: #868686;
     --primary-text-color: var(--primary-text-color-light);
     --secondary-text-color: var(--secondary-text-color-light);
-    --welcome-text-title-color: var(--welcome-text-title-color-light);
 
     --social-icon-background-light: #4F4f4F;
     --social-icon-background-dark: #FFFFFF;
@@ -26,6 +26,7 @@
     --body-backround-dark: #1A1A1A;
     --body-background: var(--body-backround-light);
 
+    --main-transition-time: .5s;
 
     --max-width: 1100px;
 }
@@ -33,9 +34,15 @@
 body.darkmode {
     --social-icon-background: var(--social-icon-background-dark);
     --body-background: var(--body-backround-dark);
+    --primary-text-color: var(--primary-text-color-dark);
+    --secondary-text-color: var(--secondary-text-color-dark);
 }
 
 body {
     margin: 0;
     background-color: var(--body-background);
+}
+
+.transition {
+    transition: var(--main-transition-time);
 }
