--- a/styles/darkmode-toggle.styles.css
+++ b/styles/darkmode-toggle.styles.css
@@ -53,7 +53,7 @@
     box-shadow: 0 0 3px #FF5C00;
 }
 
-.darkmode-slider.transition .slider:before{
+.darkmode-slider .slider:before{
     transition: var(--main-transition-time);
 }
 
@@ -72,7 +72,7 @@
     background-size: cover;
 }
 
-.darkmode-slider.transition .slider:after{
+.darkmode-slider .slider:after{
     transition: var(--main-transition-time);
 }
 
