--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,19 +19,23 @@
     --primary-text-color: var(--primary-text-color-light);
     --secondary-text-color: var(--secondary-text-color-light);
 
-    --social-icon-background-light: #4F4f4F;
-    --social-icon-background-dark: #FFFFFF;
-    --social-icon-background: var(--social-icon-background-light);
-
     --body-background-light: #FFFFFF;
     --body-backround-dark: #1A1A1A;
     --body-background: var(--body-backround-light);
 
+    --social-icon-background-light: #4F4f4F;
+    --social-icon-background-dark: #FFFFFF;
+    --social-icon-background: var(--social-icon-background-light);
+
+    --social-icon-foreground-light: #FFFFFF;
+    --social-icon-foreground-dark: #000000;
+    --social-icon-foreground: var(--social-icon-foreground-light);
+    
     --about-me-background-light: #E7F1F4;
     --about-me-background-dark: #2F2F2F;
     --about-me-background: var(--about-me-background-light);
 
-    --main-transition-time: .5s;
+    --main-transition-time: 0.75s;
 
     --max-width: 1100px;
 }
@@ -42,12 +46,14 @@ body.darkmode {
     --primary-text-color: var(--primary-text-color-dark);
     --secondary-text-color: var(--secondary-text-color-dark);
     --about-me-background: var(--about-me-background-dark);
+    --social-icon-foreground: var(--social-icon-foreground-dark);
 }
 
 body {
     margin: 0;
     background-color: var(--body-background);
     font-family: 'Open Sans', sans-serif;
+    transition: var(--main-transition-time);
 }
 
 .transition {
