--- a/styles/utils.styles.css
+++ b/styles/utils.styles.css
@@ -1,4 +1,4 @@
-.contact-btn{
+.contact-btn {
     color: white;
     border: none;
     cursor: pointer;
@@ -6,4 +6,28 @@
 
 .contact-btn:hover {
     box-shadow: 2px 2px 3px hsl(0, 0%, 40%);
+}
+
+.section-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-title>* {
+    text-align: center;
+}
+
+.section-title>h2 {
+    margin: 0;
+    margin-bottom: 0.1em;
+    font-weight: 600;
+    font-size: 4rem;
+    color: var(--primary-text-color);
+}
+
+.section-title>p {
+    margin: 0;
+    font-size: 1.15em;
+    color: var(--secondary-text-color);
 }
