--- a/styles/utils.styles.css
+++ b/styles/utils.styles.css
@@ -31,3 +31,15 @@
     font-size: 1.15em;
     color: var(--secondary-text-color);
 }
+
+.social-icon-wrapper {
+    display: block;
+    width: 2.8em;
+    height: 2.8em;
+    border-radius: 1.4em;
+    background-color: var(--social-icon-background);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
